@@ -1,5 +1,6 @@
 2001-03-10  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* Usecode: Fixed gollem in Test-of-Love.
 	* npcnear.cc: Monster in 'wait' schedule shouldn't attack.  Fixes
 	problem with 1st mage in Test of Courage.
 	* Audio:  For Win32, changed desired sample rate from 44100 to
